fix(eosio): set max-transaction-time = 1000 in config.ini closes #80

--- a/services/eosio/config/config.ini
+++ b/services/eosio/config/config.ini
@@ -1,12 +1,14 @@
 ## http config
 http-server-address = 0.0.0.0:8888
-http-alias=127.0.0.1:8888
-http-alias=eosio:8888
-http-alias=localhost:8888
-http-alias=eosio.eoslocal.io
-http-validate-host=false
-
+http-alias = 127.0.0.1:8888
+http-alias = eosio:8888
+http-alias = localhost:8888
+http-alias = eosio.eoslocal.io
+http-validate-host = false
 access-control-allow-origin = *
+
+# Prevent error when deploying system contracts https://git.io/fpKc8
+max-transaction-time = 1000
 # Enable production on a stale chain, since a single-node test chain is pretty much always stale
 enable-stale-production = true
 # Enable block production with the testnet producers
