--- a/services/eosio/config/config.ini
+++ b/services/eosio/config/config.ini
@@ -1,10 +1,6 @@
 ## http config
 http-server-address = 0.0.0.0:8888
-http-alias = 127.0.0.1:8888
-http-alias = eosio:8888
-http-alias = localhost:8888
-http-alias = eosio.eoslocal.io
-http-validate-host = false
+http-validate-host=false
 access-control-allow-origin = *
 
 # Prevent error when deploying system contracts https://git.io/fpKc8
