refactor(eosio): update config.ini

--- a/services/eosio/config/config.ini
+++ b/services/eosio/config/config.ini
@@ -2,7 +2,8 @@
 http-server-address = 0.0.0.0:8888
 http-validate-host=false
 access-control-allow-origin = *
-
+# Print out contracts
+contracts-console = true
 # Prevent error when deploying system contracts https://git.io/fpKc8
 max-transaction-time = 1000
 # Enable production on a stale chain, since a single-node test chain is pretty much always stale
@@ -19,5 +20,6 @@ plugin = eosio::history_api_plugin
 # Enable the mongodb plugin
 plugin = eosio::mongo_db_plugin
 mongodb-uri = mongodb://mongo:27017/EOSFN
-# Whitelist contract actions
+# Whitelist contract actions you want to store on the history database
+# mongodb-filter-on = '*'
 mongodb-filter-on = eoslocal:greet:
